# green2epub

./: CHANGELOG.md  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
completions/: _green2epub  _green2epub.ps1  green2epub.bash  green2epub.elv  green2epub.fish
src/: args.rs  content.rs  errors.rs  logger.rs  main.rs  parser.rs  tag.rs
static/: coverstyle.css  style.css
