[package]
name = "green2epub"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
epub-builder = { git = "https://github.com/ZodiacalComet/epub-builder.git", branch = "use-case-patch" }
html-escape = "0.2"

log = "0.4"
humantime = "2.1"
console = "0.15"
indicatif = "0.16"
