[package]
name = "green2epub"
version = "0.1.0"
edition = "2021"
license = "Unlicense"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0", features = ["derive"] }
epub-builder = "0.5"
html-escape = "0.2"
imagesize = "0.9"

log = "0.4"
humantime = "2.1"
console = "0.15"
indicatif = "0.16"
